[package]
name = "keystore"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand = "0.8.4"
dotenvy = "0.15.7"
hex = "0.4.3"
aes-gcm = "0.10.3"
mockall = { version = "0.12.1" }
base64 = "0.22.1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.4"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = "3.0.1"

