[package]
name = "keystore-rs"
version = "0.1.1"
edition = "2021"
authors = [
    "Ryan Quinn Ford <ryan@deltadevs.xyz>",
    "Sebastian Pusch <sebastian@deltadevs.xyz>",
]
description = "A Rust library for securely generating, storing, and managing cryptographic keys with support for macOS and Linux keychain integration."
homepage = "https://github.com/deltadevsde/keystore"
repository = "https://github.com/deltadevsde/keystore"
license = "MIT"
readme = "README.md"

[dependencies]
ed25519-consensus = "2.1.0"
rand = "0.8.4"
dotenvy = "0.15.7"
hex = "0.4.3"
aes-gcm = "0.10.3"
mockall = { version = "0.12.1" }
base64 = "0.22.1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.4"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = "3.0.1"
