[package]
name = "keystore-rs"
version = "0.3.0"
edition = "2021"
authors = [
    "Ryan Quinn Ford <ryan@deltadevs.xyz>",
    "Sebastian Pusch <sebastian@deltadevs.xyz>",
]
description = "A Rust library for securely generating, storing, and managing cryptographic keys with support for macOS and Linux keychain integration."
homepage = "https://github.com/deltadevsde/keystore"
repository = "https://github.com/deltadevsde/keystore"
license = "MIT"
readme = "README.md"

[dependencies]
ed25519-consensus = "2.1.0"
anyhow = "1.0.44"
rand = "0.8.5"
dotenvy = "0.15.7"
hex = "0.4.3"
aes-gcm = "0.10.3"
mockall = { version = "0.13.1" }
base64 = "0.22.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.70"
dirs = "6.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.0.1"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = "3.6.1"

[dev-dependencies]
tempfile = "3.2.0"
